--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -92,6 +92,8 @@ body {
 	align-items: center;
 	text-align: left;
 	overflow: hidden;
+	background-position: center;
+	background-color: Black;
 }
 
 .hero picture {
