--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -35,7 +35,7 @@
   <header>
     <div class="hero">
       <picture>
-        <source media="(max-width: 600px)" set="/images/heros/hero-image_4-small.jpg">
+        <source media="(max-width: 600px)" scrset="/images/heros/hero-image_4-small.jpg">
         <img src='/images/heros/hero-image_4-large.jpg' 
               alt="Large Image For Restaurant">
       </picture>
