--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -36,7 +36,7 @@
     <div class="hero">
       <picture>
         <source media="(max-width: 600px)" scrset="/images/heros/hero-image_4-small.jpg">
-        <img src='/images/heros/hero-image_4-large.jpg' 
+        <img srcset='/images/heros/hero-image_4-large.jpg' 
               alt="Large Image For Restaurant">
       </picture>
       <div class="hero__inner">
